v0.0.1/modules/schema/pages/class/Forecast.adoc
= `Forecast`
:toclevels: 4


+++A forecast group of value sets and/or phenomena characteristics.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Forecast`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]
*** *`Forecast`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Forecast {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EnvironmentalDataProvider {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalStringMeasurement {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalAnalog {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalEvent {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalDiscrete {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalPhenomenon {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Forecast -> DateTimeInterval: validFor


Forecast -> EnvironmentalDataProvider: EnvironmentalDataProvider


Forecast -> EnvironmentalStringMeasurement: EnvironmentalStringMeasurement


Forecast -> EnvironmentalAnalog: EnvironmentalAnalog


Forecast -> EnvironmentalEvent: EnvironmentalEvent


Forecast -> EnvironmentalDiscrete: EnvironmentalDiscrete


Forecast -> EnvironmentalPhenomenon: EnvironmentalPhenomenon


Forecast -> DiagramObject: DiagramObjects


Forecast -> InstanceSet: InstanceSet


Forecast -> Name: Names


Forecast -> ChangeSetMember: PropertiesCIMDataObject


Forecast -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<validFor,`validFor`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++The interval for which the forecast is valid.  For example, a forecast issued now for tomorrow might be valid for the next 2 hours.+++

| <<EnvironmentalDataProvider,`EnvironmentalDataProvider`>>
| 0..1
| xref::class/EnvironmentalDataProvider.adoc[`EnvironmentalDataProvider`]
| +++Environmental data provider supplying this environmental information.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<created,`created`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The timestamp of when the forecast was created+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EnvironmentalAnalog,`EnvironmentalAnalog`>>
| 0..*
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]
| +++Environmental analog associated with this observation or forecast.+++

| <<EnvironmentalDiscrete,`EnvironmentalDiscrete`>>
| 0..*
| xref::class/EnvironmentalDiscrete.adoc[`EnvironmentalDiscrete`]
| +++Environmental discrete (integer) associated with this observation or forecast.+++

| <<EnvironmentalEvent,`EnvironmentalEvent`>>
| 0..*
| xref::class/EnvironmentalEvent.adoc[`EnvironmentalEvent`]
| +++Environmental event to which this forecast or observation relates.+++

| <<EnvironmentalPhenomenon,`EnvironmentalPhenomenon`>>
| 0..*
| xref::class/EnvironmentalPhenomenon.adoc[`EnvironmentalPhenomenon`]
| n/a

| <<EnvironmentalStringMeasurement,`EnvironmentalStringMeasurement`>>
| 0..*
| xref::class/EnvironmentalStringMeasurement.adoc[`EnvironmentalStringMeasurement`]
| +++Environmental string measurement associated with this forecast or observation.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#created]
=== `created`
+++The timestamp of when the forecast was created+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.created`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EnvironmentalAnalog]
=== `EnvironmentalAnalog`
+++Environmental analog associated with this observation or forecast.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalAnalog`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#EnvironmentalDataProvider]
=== `EnvironmentalDataProvider`
+++Environmental data provider supplying this environmental information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalDataProvider`
| Cardinality
| 0..1
| Type
| xref::class/EnvironmentalDataProvider.adoc[`EnvironmentalDataProvider`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#EnvironmentalDiscrete]
=== `EnvironmentalDiscrete`
+++Environmental discrete (integer) associated with this observation or forecast.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalDiscrete`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalDiscrete.adoc[`EnvironmentalDiscrete`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#EnvironmentalEvent]
=== `EnvironmentalEvent`
+++Environmental event to which this forecast or observation relates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalEvent`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalEvent.adoc[`EnvironmentalEvent`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#EnvironmentalPhenomenon]
=== `EnvironmentalPhenomenon`


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalPhenomenon`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalPhenomenon.adoc[`EnvironmentalPhenomenon`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#EnvironmentalStringMeasurement]
=== `EnvironmentalStringMeasurement`
+++Environmental string measurement associated with this forecast or observation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalStringMeasurement`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalStringMeasurement.adoc[`EnvironmentalStringMeasurement`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#validFor]
=== `validFor`
+++The interval for which the forecast is valid.  For example, a forecast issued now for tomorrow might be valid for the next 2 hours.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Forecast.validFor`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===


