v1.1.0/modules/schema/pages/class/Forecast.adoc
= `Forecast`
:toclevels: 4


+++A forecast group of value sets and/or phenomena characteristics.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Forecast`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]
*** *`Forecast`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<validFor,`validFor`>>
//| [[slots_table.validFor]]<<validFor,`validFor`>>
| 0..1 +
xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++The interval for which the forecast is valid.  For example, a forecast issued now for tomorrow might be valid for the next 2 hours.+++
| _n/a_

| <<EnvironmentalAnalog,`EnvironmentalAnalog`>>
//| [[slots_table.EnvironmentalAnalog]]<<EnvironmentalAnalog,`EnvironmentalAnalog`>>
| 0..* +
xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]
| +++Environmental analog associated with this observation or forecast.+++
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<EnvironmentalDataProvider,`EnvironmentalDataProvider`>>
//| [[slots_table.EnvironmentalDataProvider]]<<EnvironmentalDataProvider,`EnvironmentalDataProvider`>>
| 0..1 +
xref::class/EnvironmentalDataProvider.adoc[`EnvironmentalDataProvider`]
| +++Environmental data provider supplying this environmental information.+++
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<EnvironmentalDiscrete,`EnvironmentalDiscrete`>>
//| [[slots_table.EnvironmentalDiscrete]]<<EnvironmentalDiscrete,`EnvironmentalDiscrete`>>
| 0..* +
xref::class/EnvironmentalDiscrete.adoc[`EnvironmentalDiscrete`]
| +++Environmental discrete (integer) associated with this observation or forecast.+++
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<EnvironmentalEvent,`EnvironmentalEvent`>>
//| [[slots_table.EnvironmentalEvent]]<<EnvironmentalEvent,`EnvironmentalEvent`>>
| 0..* +
xref::class/EnvironmentalEvent.adoc[`EnvironmentalEvent`]
| +++Environmental event to which this forecast or observation relates.+++
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<EnvironmentalPhenomenon,`EnvironmentalPhenomenon`>>
//| [[slots_table.EnvironmentalPhenomenon]]<<EnvironmentalPhenomenon,`EnvironmentalPhenomenon`>>
| 0..* +
xref::class/EnvironmentalPhenomenon.adoc[`EnvironmentalPhenomenon`]
| _n/a_
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<EnvironmentalStringMeasurement,`EnvironmentalStringMeasurement`>>
//| [[slots_table.EnvironmentalStringMeasurement]]<<EnvironmentalStringMeasurement,`EnvironmentalStringMeasurement`>>
| 0..* +
xref::class/EnvironmentalStringMeasurement.adoc[`EnvironmentalStringMeasurement`]
| +++Environmental string measurement associated with this forecast or observation.+++
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<created,`created`>>
//| [[slots_table.created]]<<created,`created`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The timestamp of when the forecast was created+++
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#created]
=== `created`
+++The timestamp of when the forecast was created+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.created`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.created,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EnvironmentalAnalog]
=== `EnvironmentalAnalog`
+++Environmental analog associated with this observation or forecast.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalAnalog`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalAnalog,&#10548;>>
--
////


//[discrete]
[#EnvironmentalDataProvider]
=== `EnvironmentalDataProvider`
+++Environmental data provider supplying this environmental information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalDataProvider`
| Cardinality
| 0..1
| Type
| xref::class/EnvironmentalDataProvider.adoc[`EnvironmentalDataProvider`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalDataProvider,&#10548;>>
--
////


//[discrete]
[#EnvironmentalDiscrete]
=== `EnvironmentalDiscrete`
+++Environmental discrete (integer) associated with this observation or forecast.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalDiscrete`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalDiscrete.adoc[`EnvironmentalDiscrete`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalDiscrete,&#10548;>>
--
////


//[discrete]
[#EnvironmentalEvent]
=== `EnvironmentalEvent`
+++Environmental event to which this forecast or observation relates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalEvent`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalEvent.adoc[`EnvironmentalEvent`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalEvent,&#10548;>>
--
////


//[discrete]
[#EnvironmentalPhenomenon]
=== `EnvironmentalPhenomenon`



[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalPhenomenon`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalPhenomenon.adoc[`EnvironmentalPhenomenon`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalPhenomenon,&#10548;>>
--
////


//[discrete]
[#EnvironmentalStringMeasurement]
=== `EnvironmentalStringMeasurement`
+++Environmental string measurement associated with this forecast or observation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalInformation.EnvironmentalStringMeasurement`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalStringMeasurement.adoc[`EnvironmentalStringMeasurement`]

| Inherited from
| xref::class/EnvironmentalInformation.adoc[`EnvironmentalInformation`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalStringMeasurement,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#validFor]
=== `validFor`
+++The interval for which the forecast is valid.  For example, a forecast issued now for tomorrow might be valid for the next 2 hours.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Forecast.validFor`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

////
[.text-left]
--
<<slots_table.validFor,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
